<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#4D000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/Headline"
        android:layout_width="374dp"
        android:layout_height="127dp"
        android:text="@string/headline_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/subText"
        android:layout_marginTop="277dp" />


    <TextView
        android:id="@+id/subText"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:text="@string/sub_text"
        android:textAlignment="center"
        android:textColor="#EDEDED"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />

    <TextView
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:background="#000000"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/sign_in_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/signInTextHolder"
        android:layout_width="0dp"
        android:layout_height="62dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_in_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </FrameLayout>


    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/signup_rounded_bg"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/sign_up_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />




</androidx.constraintlayout.widget.ConstraintLayout>